@@ -34,7 +34,7 @@ class ZMTextFormWidget extends ZMFormWidget {
      */
     function __construct() {
         parent::__construct();
-        $this->setAttributeNames(array('id', 'class', 'size', 'maxlength', 'autocomplete'));
+        $this->setAttributeNames(array('id', 'class', 'size', 'maxlength', 'autocomplete', 'title'));
     }
 
     /**
